created block Desire compensation

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,3 +38,12 @@ nav{
         color: aliceblue;
     }
 }
+.block{
+    border: 1px solid red;
+    border-radius: 5px;
+    color: red;
+    background: beige;
+    width: 400px;
+    margin-left: 35%;
+    margin-top: 20px;
+}
