--- a/src/App.scss
+++ b/src/App.scss
@@ -47,3 +47,8 @@ nav{
     margin-left: 35%;
     margin-top: 20px;
 }
+div:hover{
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
+}
